fix: increase component image width on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,7 +12,7 @@ html {
 }
 
 .components-image {
-    width: 50%;
+    width: 100%;
     margin: 30px auto 0 auto;
     display: block;
 }
@@ -169,5 +169,9 @@ html {
         .heading {
             font-size: 11px;
         }
+    }
+
+    .components-image {
+        width: 50%;
     }
 }
